# VibeCode-Jam

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  run_local.sh
backend/: .env  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt  reset_db_keep_data.py
backend/app/: alembic.ini  database.py  main.py
backend/app/alembic/: env.py
backend/app/core/: config.py
backend/app/dependencies/: admin.py  auth.py  moderator.py
backend/app/models/: __init__.py  execution.py  hint_usage.py  moderator.py  question.py  task.py  task_communication.py  task_metric.py  task_solution.py  user.py  user_contest_tasks.py  vacancy.py
backend/app/routes/: __init__.py  admin.py  auth.py  executions.py  hints.py  moderator.py  moderator_auth.py  questions.py  scoring.py  tasks.py  vacancies.py
backend/app/schemas/: __init__.py  answer.py  auth.py  execution.py  hint_usage.py  moderator.py  question.py  scoring.py  task.py  task_communication.py  task_metric.py  task_solution.py  user.py  vacancy.py
backend/app/services/: __init__.py  auth.py  crud.py  email.py  ml_client.py  moderator_auth.py  post_submit.py  scoring.py
backend/scripts/: bootstrap_seed.py  create_default_moderator.py  init_data.py
ml/: API_GUIDE.md  CHANGELOG.md  Dockerfile  EXAMPLES.md  HINTS_GUIDE.md  INSTALLATION.md  INTEGRATION.md  ML_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  env.example  pyproject.toml  requirements.txt  test_anticheat_russian.sh  test_evaluation_russian.sh  test_hints.sh  test_russian.sh  test_scoring.sh
ml/app/: main.py
(+90 files in other folders)
