[project]
name = "ide-ml"
version = "0.1.0"
description = "ML Microservice for VibeCode Jam"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httpx==0.27.0",
    "pydantic-settings==2.7.1"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
